# lvgl_port_lcd-hc

./: CMakeLists.txt  README.md  lvgl_port_ili9341.c  lvgl_port_ili9341.h  lvgl_port_st7789v2.c  lvgl_port_st7789v2.h
